[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facturify"
version = "0.1.2"
description = "Simple Facturify API Wrapper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
]
