[project]
name = "facturify"
version = "0.5.0"
description = "Simple Facturify API Wrapper"
authors = [
    { name = "Isaac Sánchez", email = "isaac@elrincondelsanchez.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
